Project

General

Profile

Actions

Bug #16024

closed

String#split with block. cannot use Regexp in the block.

Bug #16024: String#split with block. cannot use Regexp in the block.

Added by tksotn (TAKASHI OOTANI) about 7 years ago. Updated about 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.3p62 (2019-04-16 revision 67580) [x86_64-linux]
[ruby-core:93940]

Description

$ ruby -v
ruby 2.6.3p62 (2019-04-16 revision 67580) [x86_64-linux]
$ cat foo
str = "aaa,bbb;ccc,ddd"
n=0
str.split(/[;,]/) do |word|
    n+=1
    p [n,word.gsub(/\w/,"A")]
end
$ ruby foo
[1, "AAA"]
[2, "\u0000AAA,AAA;AAA,AAA"]
$
$ cat bar
str = "aaa\nb\nccc\nddd\n"
n=0
str.split(/\n/) do |line|
    n+=1
    p [n,line.gsub(/.*/,"A")]
end
$ ruby bar
=> infinite loop

expected output:

[1, "AAA"]
[2, "AAA"]
[3, "AAA"]
[4, "AAA"]
Actions

Also available in: PDF Atom