Occupy match data

* string.c (rb_str_split_m): occupy match data not to be modified
  during yielding the block.  [Bug #16024]